--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.7.4"
   }
 }
